manifest/ingress/ingress-resources.yaml
# first requirment is to deploy ingress controller

# you can deploy within ingress-nginx namespace by -> kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.5.1/deploy/static/provider/cloud/deploy.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-php
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/proxy-body-size: "0"
    # nginx.org/client-max-body-size: "500m"
    # nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  # ingressClassName: nginx
  # tls:
  # - hosts:
  #   - php.deepcloud.com
  #   secretName: ingress-ssl
  rules:
    # - host: php.deepcloud.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php-service-external # because we need to use  '.' to access another namespace and k8s ingress not allow naming convention contain with '.' thats why we use external service type.
                port:
                  number: 80
# configure ssl by yhis link :-> https://snyk.io/blog/setting-up-ssl-tls-for-kubernetes-ingress/
